[package]
name = "leyline-fs"
version = "0.8.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["validate", "fuse", "nfs"]
validate = [
    "dep:tree-sitter",
    "dep:tree-sitter-go",
    "dep:tree-sitter-python",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-elixir",
]
fuse = ["dep:fuser", "dep:libc"]
nfs = ["dep:nfsserve", "dep:libc"]
splice = ["dep:leyline-ts"]

[dependencies]
parking_lot = { workspace = true }
leyline-core = { path = "../../ll-core/core" }
# Shared C-boundary helpers (bead `ley-line-open-85fb1f` PR 2).
leyline-ffi-helpers = { path = "../../ll-core/ffi-helpers" }
leyline-schema = { path = "../../ll-core/schema" }
anyhow = { workspace = true }
memmap2 = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
# T2.3: BLAKE3 to verify σ(arena buffer) == ctrl.current_root before
# deserialize. Locked to BLAKE3 per Σ §3.4.
blake3 = { workspace = true }
fuser = { version = "0.15", optional = true }
libc = { workspace = true, optional = true }
log = { workspace = true }
rusqlite = { workspace = true, features = ["bundled", "serialize"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
nfsserve = { version = "0.10", optional = true }
crossbeam-queue = "0.3"
async-trait = "0.1"
tokio = { workspace = true, features = ["net"] }
tree-sitter = { workspace = true, optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-elixir = { version = "0.3.5", optional = true }
leyline-ts = { path = "../ts", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
leyline-ts = { path = "../ts" }
