[package]
name = "leyline-fs"
version = "0.10.2"
edition = "2024"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["validate", "fuse", "nfs"]
validate = [
    "dep:tree-sitter",
    "dep:tree-sitter-go",
    "dep:tree-sitter-python",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-elixir",
]
fuse = ["dep:fuser", "dep:libc"]
nfs = ["dep:nfsserve", "dep:libc"]
splice = ["dep:leyline-ts"]
# Chunk-backed content storage (ADR-0026 at chunk granularity): the SQL
# projection stores a chunk MANIFEST instead of whole file bytes, so a range
# read selects only overlapping chunks. Opt-in so the lean mount build is
# unchanged.
cdc = ["dep:leyline-cdc"]

[dependencies]
parking_lot = { workspace = true }
leyline-core = { path = "../../ll-core/core" }
# Shared C-boundary helpers (bead `ley-line-open-85fb1f` PR 2).
leyline-ffi-helpers = { path = "../../ll-core/ffi-helpers" }
leyline-schema = { path = "../../ll-core/schema" }
anyhow = { workspace = true }
memmap2 = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
# T2.3: BLAKE3 to verify σ(arena buffer) == ctrl.current_root before
# deserialize. Locked to BLAKE3 per Σ §3.4.
blake3 = { workspace = true }
# `features = ["libfuse"]` is REQUIRED, not incidental. fuser 0.16 changed its
# default feature set from `["libfuse"]` to `[]`, which silently switches the
# mount implementation to the pure-Rust one — and that is Linux-only, so a
# macOS build fails in fuser's build.rs with "Building without libfuse is only
# supported on Linux". Restoring it explicitly keeps 0.15's behaviour (libfuse2
# via the fuse-t wrapper in rs/pkgconfig on macOS, libfuse3 on Linux).
#
# Bumped 0.15 -> 0.16 for GHSA-cvmj-47v9-35m9 (high): uninitialized memory read
# and leak in fuser < 0.16.0.
fuser = { version = "0.16", optional = true, features = ["libfuse"] }
libc = { workspace = true, optional = true }
log = { workspace = true }
rusqlite = { workspace = true, features = ["bundled", "serialize"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
nfsserve = { version = "0.10", optional = true }
crossbeam-queue = "0.3"
async-trait = "0.1"
tokio = { workspace = true, features = ["net"] }
tree-sitter = { workspace = true, optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-elixir = { version = "0.3.5", optional = true }
leyline-ts = { path = "../ts", optional = true }
leyline-cdc = { path = "../cdc", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
leyline-ts = { path = "../ts" }
