[package]
name = "leyline-hdc"
version = "0.4.3"
edition = "2024"

[dependencies]
rusqlite = { version = "0.39", features = ["bundled", "functions"] }
anyhow = "1"
blake3 = "1"
log = "0.4"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", default-features = false, features = ["plotters", "cargo_bench_support"] }

[[bench]]
name = "hdc_perf"
harness = false
