[package]
name = "leyline-hdc"
version = "0.7.7"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
parking_lot = { workspace = true }
rusqlite = { workspace = true, features = ["bundled", "functions"] }
anyhow = { workspace = true }
blake3 = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { version = "0.8", default-features = false, features = ["plotters", "cargo_bench_support"] }

[[bench]]
name = "hdc_perf"
harness = false
