[package]
name = "leyline-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
leyline-schema = { path = "../../ll-core/schema" }
rusqlite = { version = "0.34", features = ["bundled", "serialize"] }
lsp-types = "0.95"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "rt", "time"] }
log = "0.4"
