[package]
name = "leyline-lsp"
version = "0.10.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
leyline-schema = { path = "../../ll-core/schema" }
leyline-schema-capnp = { path = "../../ll-core/schema-capnp" }
rusqlite = { workspace = true, features = ["bundled", "serialize"] }
lsp-types = "0.97"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "sync", "macros", "rt", "time"] }
log = { workspace = true }
# ADR-0014 §3 — exact-pin declared in workspace (see schema-capnp/Cargo.toml).
capnp = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
