[package]
name = "leyline-sheaf"
version = "0.7.7"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Čech cohomology engine: sheaf cache, coboundary operators, structural invalidation"

[features]
# Test-only mechanical-reach spies for ADR-0020 falsifiability gates.
# Adds an atomic counter inside `CellComplex::detect_violations` so
# downstream tests (notably the L10 `agreement` op Gate 3 test in
# `leyline-cli-lib`) can assert the op actually invoked the sheaf
# algebra rather than short-circuiting. Off by default — release
# builds pay nothing.
test-spy = []

[dependencies]
log = { workspace = true }
nalgebra = "0.35"
sha2 = "0.11"
nalgebra-sparse = "0.12"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
sha2 = "0.11"
# Only tests wrap `Arc<Mutex<...>>` around CellComplex — production
# ships single-threaded. Kept as a dev-dep so leyline-sheaf's
# published API stays parking_lot-independent.
parking_lot = { workspace = true }
