[package]
name = "leyline-sheaf"
version = "0.9.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Čech cohomology engine: sheaf cache, coboundary operators, structural invalidation"

[features]
# Test-only mechanical-reach spies for ADR-0020 falsifiability gates.
# Adds an atomic counter inside `CellComplex::detect_violations` so
# downstream tests (notably the L10 `agreement` op Gate 3 test in
# `leyline-cli-lib`) can assert the op actually invoked the sheaf
# algebra rather than short-circuiting. Off by default — release
# builds pay nothing.
test-spy = []

[dependencies]
log = { workspace = true }
nalgebra = "0.35"
sha2 = "0.11"
nalgebra-sparse = "0.12"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
sha2 = "0.11"
# Only tests wrap `Arc<Mutex<...>>` around CellComplex — production
# ships single-threaded. Kept as a dev-dep so leyline-sheaf's
# published API stays parking_lot-independent.
parking_lot = { workspace = true }
# Rung-1 (ADR-0030, bead ley-line-open-d4e605): the embedding-stalk
# divergence test builds locality-preserving hypervector stalks from
# region bytes using the HDC substrate's own `bytes_to_hv` +
# popcount-distance primitives, then feeds them through the sheaf's
# real `edge_violation_squared`. Dev-dep only — production `leyline-sheaf`
# stays HDC-independent (the swap is not shipped, only falsified).
leyline-hdc = { path = "../hdc" }
# Rung-2 (ADR-0030, bead ley-line-open-d50164): the AST-structural
# value experiment. The discrimination test + git-replay bench build a
# RENAME-INVARIANT structural stalk (an HV over the tree-sitter
# node-kind sequence) and the FREE ORACLE (re-derive node_defs/node_refs
# via `leyline_ts::refs::extract_rust`). Dev/bench-dep only — production
# `leyline-sheaf` stays HDC- and parser-independent.
leyline-ts = { path = "../ts", features = ["rust"] }
tree-sitter = { workspace = true }

[[bench]]
name = "git_replay_invalidation"
harness = false

[[bench]]
name = "restriction_git_replay"
harness = false
