[package]
name = "leyline-sign"
version = "0.9.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

# `leyline-sign-helper` — sign-only trust-anchor-helper daemon (ADR-0019,
# absorbed from cloister's fork under bead ley-line-open-7226e3).
#
# Native-only binary; gated behind the `host` feature so
# `cargo build -p leyline-sign` (default) and
# `cargo build --target wasm32-unknown-unknown -p leyline-sign` build
# the lib byte-identically to before. The helper daemon only compiles
# under `--features host` on a native target.
[[bin]]
name = "leyline-sign-helper"
path = "src/bin/helper.rs"
required-features = ["host"]

[features]
default = []
# Concrete Ed25519 `RootSigner` over Σ roots (workstream S1). Native-only:
# gated `not(target_arch = "wasm32")` at the module boundary.
root-signer = ["dep:leyline-core", "dep:anyhow"]
# Host-side feature — pulls in the HTTP server, OS-keystore client,
# signing pipeline, rate limiter, and CLI. Disabled on wasm32 builds;
# gated by `#[cfg(all(feature = "host", not(target_arch = "wasm32")))]`
# at every module boundary so toggling this feature does not change
# the wasm artifact.
#
# `host` covers four baseline schemes: `keychain://`, `secret-tool://`,
# `keyring://`, and `file://`. The keyring backend is wired directly to
# the `keyring` crate (no nono mediation) so the default deploy avoids
# the sigstore-verify / aws-lc-rs / landlock transitive closure flagged
# by cloister's 2026-05-13 adversarial cycle row 17.1.
host = [
  "dep:keyring",
  "dep:zeroize",
  "dep:axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:serde",
  "dep:serde_json",
  "dep:base64ct",
  "dep:clap",
  "dep:tracing",
  "dep:tracing-subscriber",
]

# `host-extras` is additive: enables the `op://` (1Password CLI) and
# `apple-password://` (macOS `security` CLI) schemes. These schemes use
# `nono::keystore` for URI validation and dispatch logic, which is what
# drags in the sigstore-verify / aws-lc-rs / landlock closure. Operators
# who need 1Password / Apple Passwords integration opt in via
# `--features host,host-extras`; the default deploy stays minimal.
#
# Subprocess shims for `op` / `security` live in
# `host::keystore::run_subprocess_with_trim` so the PATH-hijack defense
# + `env_clear` allow-list (trust-root-friend F3 / 2026-05-13 cycle
# §17.3) apply under host-extras too.
host-extras = [
  "host",
  "dep:nono",
]

[dependencies]
parking_lot = { workspace = true }
# Shared C-boundary helpers (bead `ley-line-open-85fb1f` PR 2). Zero-dep
# crate so wasm32 target stays clean.
leyline-ffi-helpers = { path = "../../ll-core/ffi-helpers" }
cms = { version = "0.2", default-features = false }
der = { version = "0.7", features = ["derive", "oid", "alloc"] }
x509-cert = { version = "0.2", default-features = false }
spki = { version = "0.7", features = ["alloc"] }
const-oid = { version = "0.9", features = ["db"] }
ed25519-dalek = "3"
# S1 signed head: concrete RootSigner over Σ roots. Optional so the wasm32
# verifier artifact stays byte-identical when the feature is off (same
# discipline as `host`).
#
# Unlike `host`, this is deliberately NOT excluded on wasm32. Verified by
# building, not by reading the dep list: `cargo build -p leyline-sign
# --features root-signer --target wasm32-unknown-unknown` succeeds, pulling
# leyline-core in. memmap2/parking_lot are present in leyline-core's manifest
# but do not break the wasm32 build. Browser-side verification of a signed
# head (S2's `verify_head`) is a wanted capability, so keep it reachable.
leyline-core = { path = "../../ll-core/core", optional = true }
anyhow = { workspace = true, optional = true }
sha2 = "0.11"
# ADR-012 canonical kid encodes to lowercase hex. Pure-Rust, wasm-clean.
hex = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
libc = { workspace = true }

# Host-feature deps. Each is `optional = true` so the wasm32 build does
# NOT pull them in (the wasm artifact must remain byte-identical when
# the host feature is added).
#
# `keyring` — direct dep for the default `host` feature (post-2026-05-13
# cycle: avoids the sigstore-verify closure that came with nono).
# Platform features pinned per nono 0.54's verified-in-practice choices:
# `apple-native` on macOS, `sync-secret-service` on Linux (see the
# target-cfg sections below).
keyring             = { version = "3", optional = true }
zeroize             = { version = "1", optional = true, features = ["alloc"] }
# `nono` — only pulled in under `host-extras`. Provides URI validators
# + load_secret_by_ref dispatcher for the `op://` and `apple-password://`
# schemes. The sigstore-verify / aws-lc-rs / landlock closure flagged
# in cloister's 2026-05-13 §17.1 is the cost of opting in.
nono                = { version = "0.54", optional = true, default-features = false, features = ["system-keyring"] }
axum                = { version = "0.7", optional = true, default-features = false, features = ["http1", "tokio", "macros", "json", "query"] }
tokio               = { workspace = true, optional = true, features = ["rt-multi-thread", "macros", "signal", "time", "net", "sync"] }
tower               = { version = "0.5", optional = true, default-features = false, features = ["util"] }
tower-http          = { version = "0.6", optional = true, default-features = false, features = ["limit", "timeout"] }
serde               = { workspace = true, optional = true, features = ["derive"] }
serde_json          = { workspace = true, optional = true }
base64ct            = { version = "1", optional = true, features = ["alloc"] }
clap                = { workspace = true, optional = true, features = ["derive"] }
tracing             = { version = "0.1", optional = true }
tracing-subscriber  = { version = "0.3", optional = true, features = ["env-filter", "fmt"] }

# Platform-specific keyring features. macOS uses the Security framework
# directly; Linux uses libsecret synchronously. Both run inside
# `spawn_blocking` so the sync variant is correct.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"], optional = true }

[dev-dependencies]
# Phase 2/3 exception (bead ley-line-open-3b2f55): rand stays at the
# literal 0.8 pin because the workspace declaration is 0.9, and
# rand 0.9's `OsRng` no longer implements `RngCore::fill_bytes` — it
# implements `TryRngCore` only, so the seed-then-`from_bytes` shape
# in `cms::tests::random_signing_key` + `cert_chain::tests::random_signing_key`
# fails to compile against the workspace version. Adapting the test
# to `OsRng.try_fill_bytes` (or `getrandom` directly) is a source
# change and out of scope for Phase 2/3 (manifest-only). This is the
# ONE baselined entry in `docs/smell-baseline.json` — see the
# workspace_deps_drift row for `rs/ll-open/sign/Cargo.toml`. Track
# under a follow-up bead once the workspace either lands 0.9 alongside
# a `rand-core 0.9` shim, or the sign tests migrate to `getrandom`.
rand = "0.8"
hex = { workspace = true }
base64 = "0.22"
# Host-side tests use reqwest + tokio; cfg-gated so wasm build doesn't drag them.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time", "net", "sync"] }
tempfile = { workspace = true }
# Serialize process-env mutations across parallel cargo-test workers
# (cloister-da0f35). `#[serial("env_LEYLINE_SIGN_RESOLVE_TTL_MS")]` makes
# the "I mutate this env var" property compile-checked-by-label across
# the test suite, not just an inline SAFETY comment.
serial_test = "3"
