[package]
name = "leyline-text-search"
version = "0.4.2"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Unstructured-text semantic search backend abstraction for ley-line-open. Default NullEngine for the wire surface; Witchcraft (XTR-WARP) engine behind the `engine-witchcraft` feature."

[features]
default = []
# Pulls candle, tokenizers, safetensors via the witchcraft crate. Off by
# default so workspace-wide `cargo check` stays light; the daemon turns it
# on via the same-named feature in `leyline-cli-lib` when text-search is
# enabled at compile time.
engine-witchcraft = ["dep:witchcraft", "dep:uuid", "dep:serde_json"]

[dependencies]
anyhow = "1"
thiserror = "2"

# Witchcraft is git-only (not on crates.io). Two non-obvious config bits:
#
#   1. No default features. The `t5_encoder` alias inside `src/embedder.rs`
#      is only created under either `t5-quantized` or `t5-openvino`, so
#      compiling the crate at all requires one of them. We pick
#      `t5-quantized` (pure-Rust path; openvino needs system C++ libs).
#
#   2. Rev pin omitted intentionally: master gets candle pin bumps that
#      keep upstream compiling against current `candle-core`. Pinning a
#      stale rev (we tried `02788a46`) drifts off the candle bump and
#      builds fail with `the ? operator can only be applied to values
#      that implement Try` on `Tensor` arithmetic. Cargo.lock pins the
#      effective rev for reproducibility; bump on intentional sync.
witchcraft = { git = "https://github.com/dropbox/witchcraft", features = ["t5-quantized"], default-features = false, optional = true }
uuid = { version = "1", features = ["v5"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
anyhow = "1"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
