[package]
name = "leyline-ts"
version = "0.5.1"
edition = "2024"

[features]
default = ["html", "markdown", "json", "yaml"]
html = ["dep:tree-sitter-html"]
markdown = ["dep:tree-sitter-md"]
json = ["dep:tree-sitter-json"]
yaml = ["dep:tree-sitter-yaml"]
go = ["dep:tree-sitter-go"]
python = ["dep:tree-sitter-python"]
elixir = ["dep:tree-sitter-elixir"]
# HCL grammar covers both vanilla HCL (.hcl) and Terraform (.tf / .tfvars).
# Maintained at tree-sitter-grammars/tree-sitter-hcl. Mache uses this for
# infra-as-code scans alongside the existing language set.
hcl = ["dep:tree-sitter-hcl"]
# Rust grammar — added 2026-06-22 alongside HDC daemon op wiring
# (ley-line-open-c32596). leyline-hdc ships a RustCanonicalMap; HDC
# search ops need tree-sitter-rust to encode Rust query inputs.
rust = ["dep:tree-sitter-rust"]
# Protobuf grammar (proto2 + proto3). Added so mache smell rules can
# query a real `_ast` over `.proto` files instead of regex/shell
# fallback. Grammar maintained at coder3101/tree-sitter-proto.
proto = ["dep:tree-sitter-proto"]
pyproject = ["dep:uv-pep508", "dep:uv-pep440", "dep:uv-normalize", "dep:toml"]

[dependencies]
tree-sitter = "0.26"
tree-sitter-html = { version = "0.23", optional = true }
tree-sitter-md = { version = "0.5", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-elixir = { version = "0.3.5", optional = true }
tree-sitter-hcl = { version = "1", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-proto = { version = "0.4", optional = true }
leyline-schema = { path = "../../ll-core/schema" }
rusqlite = { version = "0.39", features = ["bundled", "serialize"] }
serde_json = "1"
anyhow = "1"
uv-pep508 = { version = "0.0.29", optional = true }
uv-pep440 = { version = "0.0.29", optional = true }
uv-normalize = { version = "0.0.29", optional = true }
toml = { version = "0.8", optional = true }

[dev-dependencies]
rusqlite = { version = "0.39", features = ["bundled", "serialize"] }
