[package]
name = "leyline-ts"
version = "0.6.0"
edition = "2024"

[features]
default = ["html", "markdown", "json", "yaml"]
html = ["dep:tree-sitter-html"]
markdown = ["dep:tree-sitter-md"]
json = ["dep:tree-sitter-json"]
yaml = ["dep:tree-sitter-yaml"]
go = ["dep:tree-sitter-go"]
python = ["dep:tree-sitter-python"]
elixir = ["dep:tree-sitter-elixir"]
# HCL grammar covers both vanilla HCL (.hcl) and Terraform (.tf / .tfvars).
# Maintained at tree-sitter-grammars/tree-sitter-hcl. Mache uses this for
# infra-as-code scans alongside the existing language set.
hcl = ["dep:tree-sitter-hcl"]
# Rust grammar — added 2026-06-22 alongside HDC daemon op wiring
# (ley-line-open-c32596). leyline-hdc ships a RustCanonicalMap; HDC
# search ops need tree-sitter-rust to encode Rust query inputs.
rust = ["dep:tree-sitter-rust"]
# Protobuf grammar (proto2 + proto3). Added so mache smell rules can
# query a real `_ast` over `.proto` files instead of regex/shell
# fallback. Grammar maintained at coder3101/tree-sitter-proto.
proto = ["dep:tree-sitter-proto"]
# JavaScript grammar. Wired 2026-07-09 alongside the def/ref extraction
# fidelity fix (bead `ley-line-open-caf423`) — mache surfaced that JS
# files parsed but produced zero symbols because LLO had no JS pipeline
# at all. Grammar version tracks the tree-sitter-javascript 0.25.x line
# already vendored transitively through leyline-fs's validate feature.
javascript = ["dep:tree-sitter-javascript"]
# TypeScript grammar. Wired 2026-07-09 as part of the same bead
# (`ley-line-open-caf423`) — same bug class as the JS gap: a `.ts` or
# `.tsx` file parses via leyline-fs's validate pass but LLO's producer
# had no TypeScript arm, so every TS file produced zero symbols. The
# `tree-sitter-typescript` crate ships two grammars: LANGUAGE_TYPESCRIPT
# (plain .ts) and LANGUAGE_TSX (TypeScript + JSX). We pick LANGUAGE_TSX
# for the single `TypeScript` variant because it's a strict superset —
# one grammar covers both .ts and .tsx uniformly, matching how the
# `javascript` variant covers .js/.jsx/.mjs/.cjs.
typescript = ["dep:tree-sitter-typescript"]
pyproject = ["dep:uv-pep508", "dep:uv-pep440", "dep:uv-normalize", "dep:toml"]

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-html = { version = "0.23", optional = true }
tree-sitter-md = { version = "0.5", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-elixir = { version = "0.3.5", optional = true }
tree-sitter-hcl = { version = "1", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-proto = { version = "0.4", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
# tree-sitter-typescript 0.23 is the crates.io line that ships alongside
# tree-sitter 0.25 — the crate is on a slower cadence than JS but the
# grammar tracks the same `tree-sitter-language` ABI, so it links cleanly
# against the workspace tree-sitter.
tree-sitter-typescript = { version = "0.23", optional = true }
leyline-schema = { path = "../../ll-core/schema" }
rusqlite = { workspace = true, features = ["bundled", "serialize"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
uv-pep508 = { version = "0.0.29", optional = true }
uv-pep440 = { version = "0.0.29", optional = true }
uv-normalize = { version = "0.0.29", optional = true }
toml = { version = "1", optional = true }

[dev-dependencies]
rusqlite = { workspace = true, features = ["bundled", "serialize"] }
