[package]
name = "leyline-ts"
version = "0.10.1"
edition = "2024"
license = "AGPL-3.0-or-later"

[features]
default = ["html", "markdown", "json", "yaml"]
html = ["dep:tree-sitter-html"]
markdown = ["dep:tree-sitter-md"]
json = ["dep:tree-sitter-json"]
yaml = ["dep:tree-sitter-yaml"]
go = ["dep:tree-sitter-go"]
python = ["dep:tree-sitter-python"]
elixir = ["dep:tree-sitter-elixir"]
# HCL grammar covers both vanilla HCL (.hcl) and Terraform (.tf / .tfvars).
# Maintained at tree-sitter-grammars/tree-sitter-hcl. Mache uses this for
# infra-as-code scans alongside the existing language set.
hcl = ["dep:tree-sitter-hcl"]
# Rust grammar — added 2026-06-22 alongside HDC daemon op wiring
# (ley-line-open-c32596). leyline-hdc ships a RustCanonicalMap; HDC
# search ops need tree-sitter-rust to encode Rust query inputs.
rust = ["dep:tree-sitter-rust"]
# Protobuf grammar (proto2 + proto3). Added so mache smell rules can
# query a real `_ast` over `.proto` files instead of regex/shell
# fallback. Grammar maintained at coder3101/tree-sitter-proto.
proto = ["dep:tree-sitter-proto"]
# JavaScript grammar. Wired 2026-07-09 alongside the def/ref extraction
# fidelity fix (bead `ley-line-open-caf423`) — mache surfaced that JS
# files parsed but produced zero symbols because LLO had no JS pipeline
# at all. Grammar version tracks the tree-sitter-javascript 0.25.x line
# already vendored transitively through leyline-fs's validate feature.
javascript = ["dep:tree-sitter-javascript"]
# TypeScript grammar. Wired 2026-07-09 as part of the same bead
# (`ley-line-open-caf423`) — same bug class as the JS gap: a `.ts` or
# `.tsx` file parses via leyline-fs's validate pass but LLO's producer
# had no TypeScript arm, so every TS file produced zero symbols. The
# `tree-sitter-typescript` crate ships two grammars: LANGUAGE_TYPESCRIPT
# (plain .ts) and LANGUAGE_TSX (TypeScript + JSX). We pick LANGUAGE_TSX
# for the single `TypeScript` variant because it's a strict superset —
# one grammar covers both .ts and .tsx uniformly, matching how the
# `javascript` variant covers .js/.jsx/.mjs/.cjs.
typescript = ["dep:tree-sitter-typescript"]
# ── Tier 1+2 grammar bulk (bead ley-line-open-46ae48, parent e5addb) ──
# 16 of the 17 mache-registry languages LLO lacked at mache's CGO
# removal. Tier 1 = parse → _ast; Tier 2 = validate (ERROR/MISSING
# enumeration via the daemon validate op). Tier 3 (.scm def/ref
# queries) is separate work — no extractors here. cue is SKIPPED:
# the only crates.io crate (tree-sitter-cue 0.0.1) pins pre-LanguageFn
# tree-sitter ~0.20.3 and no maintained alternative exists.
#
# SQL uses DerekStride/tree-sitter-sql (crate name `tree-sitter-sequel`)
# — the same grammar mache vendored through smacker/go-tree-sitter
# pre-CGO-removal (parser.c fingerprints: keyword_* token vocabulary).
sql = ["dep:tree-sitter-sequel"]
bash = ["dep:tree-sitter-bash"]
java = ["dep:tree-sitter-java"]
c = ["dep:tree-sitter-c"]
cpp = ["dep:tree-sitter-cpp"]
# Feature `toml` gates the tree-sitter TOML grammar
# (tree-sitter-grammars/tree-sitter-toml, crate `tree-sitter-toml-ng`).
# Distinct from the optional `toml` crate below (a serde TOML parser),
# which only the `pyproject` feature pulls via `dep:toml`.
toml = ["dep:tree-sitter-toml-ng"]
# Dockerfile grammar: wharflab/tree-sitter-containerfile (Containerfile
# is the OCI spelling; the grammar covers Dockerfiles identically).
# camdencheek's `tree-sitter-dockerfile` crate is 0.2.0 on the
# pre-LanguageFn ABI (tree-sitter ^0.20 as a normal dep) — unusable
# against workspace tree-sitter 0.26.
dockerfile = ["dep:tree-sitter-containerfile"]
ruby = ["dep:tree-sitter-ruby"]
php = ["dep:tree-sitter-php"]
# Kotlin: tree-sitter-grammars fork (crate `tree-sitter-kotlin-ng`);
# fwcd's original `tree-sitter-kotlin` crate is on the old ABI.
kotlin = ["dep:tree-sitter-kotlin-ng"]
swift = ["dep:tree-sitter-swift"]
scala = ["dep:tree-sitter-scala"]
csharp = ["dep:tree-sitter-c-sharp"]
css = ["dep:tree-sitter-css"]
groovy = ["dep:tree-sitter-groovy"]
lua = ["dep:tree-sitter-lua"]
pyproject = ["dep:uv-pep508", "dep:uv-pep440", "dep:uv-normalize", "dep:toml"]

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-html = { version = "0.23", optional = true }
tree-sitter-md = { version = "0.5", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-elixir = { version = "0.3.5", optional = true }
tree-sitter-hcl = { version = "1", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-proto = { version = "0.4", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
# tree-sitter-typescript 0.23 is the crates.io line that ships alongside
# tree-sitter 0.25 — the crate is on a slower cadence than JS but the
# grammar tracks the same `tree-sitter-language` ABI, so it links cleanly
# against the workspace tree-sitter.
tree-sitter-typescript = { version = "0.23", optional = true }
# Tier 1+2 grammar bulk (bead ley-line-open-46ae48) — pinned to the
# minor line verified against tree-sitter 0.26 (all expose LanguageFn
# via tree-sitter-language ^0.1).
tree-sitter-sequel = { version = "0.3", optional = true }
tree-sitter-bash = { version = "0.25", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-toml-ng = { version = "0.7", optional = true }
tree-sitter-containerfile = { version = "0.9", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-php = { version = "0.24", optional = true }
tree-sitter-kotlin-ng = { version = "1.1", optional = true }
tree-sitter-swift = { version = "0.7", optional = true }
tree-sitter-scala = { version = "0.26", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-css = { version = "0.25", optional = true }
tree-sitter-groovy = { version = "0.1", optional = true }
tree-sitter-lua = { version = "0.5", optional = true }
leyline-schema = { path = "../../ll-core/schema" }
# Bead ley-line-open-46f7d1 (T1.b3): the CFG builder computes a
# content-addressed hash for function-body subtrees via the Σ substrate's
# `ContentAddressed` impl — matches the `blake3::hash` path enforced by
# the `lint:blake3` gate. Adding leyline-core as a direct dep here keeps
# leyline-ts on the σ substrate discipline without a new sanctioned
# exception.
leyline-core = { path = "../../ll-core/core" }
rusqlite = { workspace = true, features = ["bundled", "serialize"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
uv-pep508 = { version = "0.0.29", optional = true }
uv-pep440 = { version = "0.0.29", optional = true }
uv-normalize = { version = "0.0.29", optional = true }
toml = { version = "1", optional = true }

[dev-dependencies]
rusqlite = { workspace = true, features = ["bundled", "serialize"] }
