[package]
name = "leyline-vcs"
version = "0.10.2"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
parking_lot = { workspace = true }
leyline-core = { path = "../../ll-core/core" }
leyline-fs = { path = "../fs", default-features = false }
# `git` is NOT optional here despite `default-features = false`. jj-lib gates its
# Git backend behind `#[cfg(feature = "git")]`, and `StoreFactories::default()`
# only registers that backend when the feature is on. Every real-world jj repo is
# Git-backed (`jj git init`), so with the feature off `Workspace::load` fails with
# "Cannot read the repo" on anything but a `Workspace::init_simple` SimpleBackend
# repo — i.e. only on test fixtures. `default-features = false` stays so we keep
# opting out of jj-lib's *other* defaults; `git` is re-added explicitly.
jj-lib = { version = "0.42", default-features = false, features = ["git"] }
anyhow = { workspace = true }
hex = { workspace = true }
# `futures::io::AsyncReadExt` — provides `read()` on the `futures_io::AsyncRead`
# stream returned by jj-lib 0.42's async `store.read_file()`. tokio's
# `AsyncReadExt` doesn't apply (different trait family); jj-lib uses
# the futures-crate async stack post-0.40.
futures = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
pollster = "0.4"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros"] }
rusqlite = { workspace = true, features = ["bundled", "serialize"], optional = true }

[features]
default = []
sqlite = ["dep:rusqlite"]
