[package]
name = "cargo-toml-projector"
version = "0.7.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Project rs/**/Cargo.toml into a SQLite schema (workspace_deps + crate_deps) and run mache-shaped smell rules against the projection. Bead ley-line-open-3b2f55 Phase 3 workspace-deps drift gate."

[[bin]]
name = "cargo-toml-projector"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
clap = { workspace = true, features = ["derive"] }
toml_edit = "0.25"
walkdir = "2"
